--- a/DOCUMENT/YO_snippets_biblio.bib
+++ b/DOCUMENT/YO_snippets_biblio.bib
@@ -131,6 +131,13 @@ address = {Cambridge, MA, USA}
 
 }
 
+@book{RN1746,
+   author = {Beyer, Stefan},
+   title = {Mass und Gewicht},
+   publisher = {Manuscript},
+   year = {2021}
+}
+
 @book{RN1747,
    author = {Beyer, Stefan},
    title = {Most of My Clients Come Back},
@@ -139,12 +146,6 @@ address = {Cambridge, MA, USA}
 
 }
 
-@book{RN1746,
-   author = {Beyer, Stefan},
-   title = {Mass und Gewicht},
-   publisher = {Manuscript},
-   year = {2021}
-}
 
 @book{RN1748,
    author = {Onishi, Yoshiaki},
@@ -161,12 +162,6 @@ address = {Cambridge, MA, USA}
    year = {1995}
 }
 
-@book{RN1751,
-   author = {Czernowin, Chaya},
-   title = {Lovesong : for mixed ensemble},
-   publisher = {Schott},
-   year = {2010}
-}
 
 @book{RN1750,
    author = {Czernowin, Chaya},
@@ -175,11 +170,34 @@ address = {Cambridge, MA, USA}
    year = {2012}
 }
 
+@book{RN1751,
+   author = {Czernowin, Chaya},
+   title = {Lovesong : for mixed ensemble},
+   publisher = {Schott},
+   year = {2010}
+}
+
 @book{RN1752,
    author = {Czernowin, Chaya},
    title = {At the fringe of our gaze : for Orchestra and Concertino Group},
    publisher = {Schott},
    year = {2012/13}
+}
+
+@book{RN1753,
+   author = {Andre, Mark},
+   title = {Contrapunctus : pour piano},
+   publisher = {Durand},
+   address = {Paris},
+   year = {2006}
+}
+
+@book{RN1754,
+   author = {Andre, Mark},
+   title = {Un-fini II : pour clavecin (1996)},
+   publisher = {Editions Durand},
+   address = {Paris},
+   year = {1998}
 }
 
 @book{RN1755,
@@ -191,22 +209,6 @@ address = {Cambridge, MA, USA}
    year = {1997}
 }
 
-@book{RN1754,
-   author = {Andre, Mark},
-   title = {Un-fini II : pour clavecin (1996)},
-   publisher = {Editions Durand},
-   address = {Paris},
-   year = {1998}
-}
-
-@book{RN1753,
-   author = {Andre, Mark},
-   title = {Contrapunctus : pour piano},
-   publisher = {Durand},
-   address = {Paris},
-   year = {2006}
-}
-
 @book{RN1757,
    author = {Weisberg, Arthur},
    title = {Performing twentieth-century music : a handbook for conductors and instrumentalists},
@@ -214,6 +216,19 @@ address = {Cambridge, MA, USA}
    address = {New Haven},
    year = {1996}
 }
+
+
+@book{RN1000,
+   author = {Boulez, Pierre},
+   title = {Pli selon pli: V. Tombeau},
+   publisher = {Universal Edition},
+   address = {London},
+   year = {1971}
+}
+
+
+
+
 
 
 
