--- a/DOCUMENT/dynamics.tex
+++ b/DOCUMENT/dynamics.tex
@@ -2038,7 +2038,8 @@ taken from output-lib.scm, and was revised to suit the need.
   (let ((sten (ly:hairpin::print grob)))
    (if (grob::is-live? grob)
        (let*
-        ((decresc? (eqv? (ly:grob-property grob 'grow-direction) LEFT))
+        ((decresc? (eqv?
+                    (ly:grob-property grob 'grow-direction) LEFT))
          (hairpinHeight (ly:grob-property grob 'height))
          (toBarline? (ly:grob-property grob 'to-barline))
          (orig (ly:grob-original grob))
@@ -2072,7 +2073,7 @@ taken from output-lib.scm, and was revised to suit the need.
                    (eqv? (not-first-broken-spanner? grob )         #f)
                    (eqv? (not-last-broken-spanner? grob )          #t)
                    (eqv? (unbroken-or-first-broken-spanner? grob ) #t)
-                   (eqv? (unbroken-or-last-broken-spanner? grob )   #f)
+                   (eqv? (unbroken-or-last-broken-spanner? grob )  #f)
                    (eqv? (unbroken-spanner? grob )                 #f)
                    )
               )) ;Hairpins that breaks into next line
@@ -2083,7 +2084,7 @@ taken from output-lib.scm, and was revised to suit the need.
                (eqv? (not-first-broken-spanner? grob )         #t)
                (eqv? (not-last-broken-spanner? grob )          #t)
                (eqv? (unbroken-or-first-broken-spanner? grob ) #f)
-               (eqv? (unbroken-or-last-broken-spanner? grob )   #f)
+               (eqv? (unbroken-or-last-broken-spanner? grob )  #f)
                (eqv? (unbroken-spanner? grob )                 #f)
                )) ;Midway-through Hairpins
          (hairpinTypeD?
@@ -2093,7 +2094,7 @@ taken from output-lib.scm, and was revised to suit the need.
                (eqv? (not-first-broken-spanner? grob )         #t)
                (eqv? (not-last-broken-spanner? grob )          #f)
                (eqv? (unbroken-or-first-broken-spanner? grob ) #f)
-               (eqv? (unbroken-or-last-broken-spanner? grob )   #t)
+               (eqv? (unbroken-or-last-broken-spanner? grob )  #t)
                (eqv? (unbroken-spanner? grob )                 #f)
                )) ;multi-system Hairpin that terminates
          (xex (if decresc?
@@ -2135,10 +2136,12 @@ taken from output-lib.scm, and was revised to suit the need.
                1
                (make-path-stencil
                 (list
-                 'moveto 0 (* 0.2 (/ hairpinHeight 0.666) )
-                 'rcurveto 0 0 0.3 -0.05 0.4 0.3
-                 'moveto 0 (* -0.2 (/ hairpinHeight 0.666) )
-                 'rcurveto 0 0 0.3 0.05 0.4 -0.3
+                 'moveto 0
+                 (+ (* 0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                 'rcurveto 0 0 0.3 -0.0 0.4 0.3
+                 'moveto 0
+                 (- (* -0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                 'rcurveto 0 0 0.3 0.0 0.4 -0.3
                  )
                 0.1
                 2
@@ -2169,10 +2172,12 @@ taken from output-lib.scm, and was revised to suit the need.
                (make-path-stencil
 
                 (list
-                 'moveto 0 (* 0.2 (/ hairpinHeight 0.666) )
-                 'rcurveto 0 0 0.3 -0.05 0.4 0.3
-                 'moveto 0 (* -0.2 (/ hairpinHeight 0.666) )
-                 'rcurveto 0 0 0.3 0.05 0.4 -0.3
+                 'moveto 0
+                 (+ (* 0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                 'rcurveto 0 0 0.3 -0.0 0.4 0.3
+                 'moveto 0
+                 (- (* -0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                 'rcurveto 0 0 0.3 0.0 0.4 -0.3
                  )
                 0.1
                 2
@@ -2210,10 +2215,12 @@ taken from output-lib.scm, and was revised to suit the need.
                      1
                      (make-path-stencil
                       (list
-                       'moveto 0 (* 0.2 (/ hairpinHeight 0.666) )
-                       'rcurveto 0 0 0.3 -0.05 0.4 0.3
-                       'moveto 0 (* -0.2 (/ hairpinHeight 0.666) )
-                       'rcurveto 0 0 0.3 0.05 0.4 -0.3
+                       'moveto 0
+                       (+ (* 0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                       'rcurveto 0 0 0.3 -0.0 0.4 0.3
+                       'moveto 0
+                       (- (* -0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                       'rcurveto 0 0 0.3 0.0 0.4 -0.3
                        )
                       0.1
                       2
@@ -2326,10 +2333,10 @@ taken from output-lib.scm, and was revised to suit the need.
                   1
                   (make-path-stencil
                    (list 'moveto 0 (* 0.15 (/ hairpinHeight 0.666) )
-                         'rcurveto 0 0 0.3 -0.05 0.4 0.3
+                         'rcurveto 0 0 0.3 -0.0 0.4 0.3
                          'moveto 0
                          (- (* -0.15 (/ hairpinHeight 0.666) ) 0.1)
-                         'rcurveto 0 0 0.3 0.05 0.4 -0.3
+                         'rcurveto 0 0 0.3 0.0 0.4 -0.3
                          )
                    0.1
                    2
@@ -2361,10 +2368,10 @@ taken from output-lib.scm, and was revised to suit the need.
                   1
                   (make-path-stencil
                    (list 'moveto 0 (* 0.133 (/ hairpinHeight 0.666) )
-                         'rcurveto 0 0 0.3 -0.05 0.4 0.3
+                         'rcurveto 0 0 0.3 -0.0 0.4 0.3
                          'moveto 0
                          (- (* -0.133 (/ hairpinHeight 0.666) ) 0.1)
-                         'rcurveto 0 0 0.3 0.05 0.4 -0.3
+                         'rcurveto 0 0 0.3 0.0 0.4 -0.3
                          )
                    0.1
                    2
@@ -2393,10 +2400,10 @@ taken from output-lib.scm, and was revised to suit the need.
                   1
                   (make-path-stencil
                    (list   'moveto 0 (* 0.133 (/ hairpinHeight 0.666) )
-                           'rcurveto 0 0 0.3 -0.05 0.4 0.3
+                           'rcurveto 0 0 0.3 -0.0 0.4 0.3
                            'moveto 0
                            (- (* -0.133 (/ hairpinHeight 0.666) ) 0.1)
-                           'rcurveto 0 0 0.3 0.05 0.4 -0.3
+                           'rcurveto 0 0 0.3 0.0 0.4 -0.3
                            )
                    0.1
                    2
@@ -2430,10 +2437,12 @@ taken from output-lib.scm, and was revised to suit the need.
                0
                -1
                (make-path-stencil
-                (list 'moveto 0 (* 0.19 (/ hairpinHeight 0.666) )
-                      'rcurveto 0 0 -0.3 -0.05 -0.4 0.3
-                      'moveto 0 (* -0.19 (/ hairpinHeight 0.666) )
-                      'rcurveto 0 0 -0.3 0.05 -0.4 -0.3
+                (list 'moveto 0
+                      (+ (* 0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                      'rcurveto 0 0 -0.3 -0.0 -0.4 0.3
+                      'moveto 0
+                      (- (* -0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                      'rcurveto 0 0 -0.3 0.0 -0.4 -0.3
                       )
                 0.1
                 2
@@ -2463,10 +2472,12 @@ taken from output-lib.scm, and was revised to suit the need.
                -1
                (make-path-stencil
                 (list
-                 'moveto 0 (* 0.2 (/ hairpinHeight 0.666) )
-                 'rcurveto 0 0 -0.3 -0.05 -0.4 0.3
-                 'moveto 0 (* -0.2 (/ hairpinHeight 0.666) )
-                 'rcurveto 0 0 -0.3 0.05 -0.4 -0.3
+                 'moveto 0
+                 (+ (* 0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                 'rcurveto 0 0 -0.3 -0.0 -0.4 0.3
+                 'moveto 0
+                 (- (* -0.1665 (/ hairpinHeight 0.666) ) 0.015)
+                 'rcurveto 0 0 -0.3 0.0 -0.4 -0.3
                  )
                 0.1
                 2
@@ -2498,11 +2509,12 @@ taken from output-lib.scm, and was revised to suit the need.
            0
            -1
            (make-path-stencil
-            (list 'moveto 0 (* 0.15 (/ hairpinHeight 0.666) )
-                  'rcurveto 0 0 -0.3 -0.05 -0.4 0.3
+            (list 'moveto 0
+                  (+ (* 0.135 (/ hairpinHeight 0.666) ) 0.01 )
+                  'rcurveto 0 0 -0.3 -0.0 -0.4 0.3
                   'moveto 0
-                  (- (* -0.15 (/ hairpinHeight 0.666) ) 0.1)
-                  'rcurveto 0 0 -0.3 0.05 -0.4 -0.3
+                  (- (* -0.135 (/ hairpinHeight 0.666) ) 0.11)
+                  'rcurveto 0 0 -0.3 0.0 -0.4 -0.3
                   )
             0.1
             2
@@ -2716,9 +2728,9 @@ nDecrescTweak =
 
 
 {
- % \override Hairpin.height = #0.5
+ \override Hairpin.height = #0.5
  \override Hairpin.stencil = #flared-hairpin-curvy
- \override Hairpin.to-barline = ##f
+ \override Hairpin.to-barline = ##t
  \override Hairpin.after-line-breaking = ##f
 
  c' \o \nCrescTweak   \< c' c' c' \f \nDecrescTweak \>
@@ -2726,10 +2738,10 @@ nDecrescTweak =
  \repeat unfold 3  {c' c' c' c'} \break
  c'\ff \nDecrescTweak \> c' c' c'
  c' \p \nCrescTweak \< c' c' \nDecrescTweak #-0.6 \> c'
- c' \p \< c' c' c'\ff \nDecrescTweak \> \break
+ c' \p \< c'  c'\ff \nDecrescTweak \> c' \break
  \repeat unfold 3  {c' c' c' c'} \break
  c' \f  \nDecrescTweak \> c' c' c'\o \nCrescTweak \<
- c' c' c' c' \!
+ c' c' c' c' \break c'\!
 }
 
 \end{Verbatim}
