--- a/DOCUMENT/dynamics.tex
+++ b/DOCUMENT/dynamics.tex
@@ -1219,7 +1219,7 @@ For the purpose of using it in my own musical typesetting, this constante hairpi
 
 \subsection{Description}
 
-\textcolor{red}{\textbf{NB: }Significantly updated on December 23, 2025}
+\textcolor{red}{\textbf{NB: }Significantly updated on December 23 and 24, 2025}
 
 (See \hyperref[sec:enhanced_flared_hairpins_2]{\textbf{Enhanced Flared Hairpins II}} for the flared hairpins with curved flares.)
 
@@ -1252,7 +1252,7 @@ If you wish to use circled tips, instead of using \verb|\override Hairpin.circle
 NOTE \o \nCrescTweak \< NOTE(S) \DYNAMIC OR \! \nDecrescTweak \> NOTE(S) \o
 \end{verbatim}
 
-\textcolor{red}{Update: December 23, 2025 } \verb|\nCrescTweak| and \verb|\nDecrescTweak| accepts a number as an optional argument. This functionality has been added to allow the adjustment of the hairpin at the arrival point. Think of this as an \verb|X-offset| for the arrival point. See \textbf{Code}. 
+\textcolor{red}{Update: December 23-24, 2025 } \verb|\nCrescTweak| and \verb|\nDecrescTweak| accepts a number as an optional argument. This functionality has been added to allow the adjustment of flaring end of the hairpin, as well as the horizontal placement of the small piece of the arrival hairpin when \verb|\override to-barline| is set \verb|##f|. While I have striven to set the default setting in such a way that these micro-adjustments are not necessary, it seemed helpful to add this functionality when further refinement is needed. Think of this as an \verb|X-offset| for the arrival point. See \textbf{Code}. 
 
 \subsection{Code}
 \begin{Verbatim}[numbers=left,xleftmargin=5mm]
@@ -1429,56 +1429,56 @@ taken from output-lib.scm, and was revised to suit the need.
           (if toBarline?
               ; ... AND if the hairpin finishes at the beginning
               ; of the next line
-              ( if  (= (length siblings) 1)
-                    (ly:stencil-combine-at-edge
-                     (ly:stencil-combine-at-edge
-                      (hairpin::print-part
-                       (scale-coords
-                        coords
-                        (+ lenx 0.95) (/ leny 2))  decresc? grob)
-                      1
-                      -1
-                      (if mirrored?
-                          (hairpin::print-part
-                           (scale-coords
-                            coords
-                            (+ lenx 0.95) (/ leny -2))  decresc? grob)
-                          empty-stencil)
-                      -0.1 ;vertical padding value here
-                      )
-                     0
-                     1
-                     (make-path-stencil
-                      (list
-                       'moveto 0 (* 0.2 (/ hairpinHeight 0.666) )
-                       'rlineto 0.25 0.3
-                       'moveto 0 (* -0.2 (/ hairpinHeight 0.666) )
-                       'rlineto 0.25 -0.3
-                       )
-                      0.1
-                      2
-                      2
-                      #f
-                      )
-                     -0.075
-                     )
+              (if  (= (length siblings) 1)
+                   (ly:stencil-combine-at-edge
                     (ly:stencil-combine-at-edge
                      (hairpin::print-part
                       (scale-coords
                        coords
-                       (+ lenx 1) (/ leny 1.5)) decresc? grob)
+                       (+ lenx 0.95) (/ leny 2))  decresc? grob)
                      1
                      -1
                      (if mirrored?
                          (hairpin::print-part
                           (scale-coords
                            coords
-
-                           (+ lenx 1) (/ leny -1.5))  decresc? grob)
+                           (+ lenx 0.95) (/ leny -2))  decresc? grob)
                          empty-stencil)
                      -0.1 ;vertical padding value here
                      )
+                    0
+                    1
+                    (make-path-stencil
+                     (list
+                      'moveto 0 (* 0.2 (/ hairpinHeight 0.666) )
+                      'rlineto 0.25 0.3
+                      'moveto 0 (* -0.2 (/ hairpinHeight 0.666) )
+                      'rlineto 0.25 -0.3
+                      )
+                     0.1
+                     2
+                     2
+                     #f
+                     )
+                    -0.075
                     )
+                   (ly:stencil-combine-at-edge
+                    (hairpin::print-part
+                     (scale-coords
+                      coords
+                      (+ lenx 1.6) (/ leny 1.5)) decresc? grob)
+                    1
+                    -1
+                    (if mirrored?
+                        (hairpin::print-part
+                         (scale-coords
+                          coords
+
+                          (+ lenx 1.6) (/ leny -1.5))  decresc? grob)
+                        empty-stencil)
+                    -0.1 ;vertical padding value here
+                    )
+                   )
               (ly:stencil-combine-at-edge
                (hairpin::print-part
                 (scale-coords
@@ -1586,46 +1586,14 @@ taken from output-lib.scm, and was revised to suit the need.
                    (hairpin::print-part
                     (scale-coords
                      coords
-                     (+ lenx 0.75) (/ leny 3)) decresc? grob)
+                     (+ lenx 0.25) (/ leny 3)) decresc? grob)
                    1
                    -1
                    (if mirrored?
                        (hairpin::print-part
                         (scale-coords
                          coords
-                         (+ lenx 0.75) (/ leny -3))  decresc? grob)
-                       empty-stencil)
-                   0.1 ;vertical padding value here
-                   )
-                  0
-                  1
-                  (make-path-stencil
-                   (list   'moveto 0 (* 0.133 (/ hairpinHeight 0.666) )
-                           'rlineto 0.25 0.3
-                           'moveto 0
-                           (- (* -0.133 (/ hairpinHeight 0.666) ) 0.1)
-                           'rlineto 0.25 -0.3
-                           )
-                   0.1
-                   2
-                   2
-                   #f
-                   )
-                  -0.075
-                  )
-                 (ly:stencil-combine-at-edge
-                  (ly:stencil-combine-at-edge
-                   (hairpin::print-part
-                    (scale-coords
-                     coords
-                     (+ lenx 0.75) (/ leny 3)) decresc? grob)
-                   1
-                   -1
-                   (if mirrored?
-                       (hairpin::print-part
-                        (scale-coords
-                         coords
-                         (+ lenx 0.75) (/ leny -3))  decresc? grob)
+                         (+ lenx 0.25) (/ leny -3))  decresc? grob)
                        empty-stencil)
                    0.1 ;vertical padding value here
                    )
@@ -1877,12 +1845,19 @@ nCrescTweak =
                              (ly:spanner-broken-into orig)
                              '())))
 
-         (if   (or (= (length siblings) 0)
-                   (and (>= (length siblings) 0)
-                        (eq? (first siblings) grob))
+         (cond
+          ((= (length siblings) 0)
+           (cons -0.6 hOffset)
+           )
+          ((and (>= (length siblings) 1)
+                (eq? (car siblings) grob)
+                )
+           (cons -0.6 0))
+          )
 
-                   )
-               (cons -0.6 num)))
+
+
+         )
         )
       \tweak Hairpin.after-line-breaking
       #(lambda (grob)
@@ -1898,17 +1873,32 @@ nCrescTweak =
 
                )
 
-         (if  (and (>= (length siblings) 2)
-                   (eq? (car (last-pair siblings)) grob))
-              (if toBarline?
-                  (ly:grob-set-property!
-                   grob 'shorten-pair
-                   (cons 0 (+ (* 0.6 -1) hOffset)))
-                  (ly:grob-set-property!
-                   grob 'shorten-pair
-                   (cons (+ -0.6 hOffset)  -0.6))
-                  )
-              )
+         (cond  ((< (length siblings) 2)
+                 (ly:grob-set-property!
+                  grob 'shorten-pair
+                  (cons -0.6 (* hOffset -1)))
+
+                 )
+
+                ((and (>= (length siblings) 2)
+                      (eq? (car (last-pair siblings)) grob)
+                      toBarline? )
+
+                 (ly:grob-set-property!
+                  grob 'shorten-pair
+                  (cons 0 (- -0.6 hOffset)))
+
+
+                 )
+                ((and (>= (length siblings) 2)
+                      (eq? (car (last-pair siblings)) grob)
+                      (not toBarline?) )
+                 (ly:grob-set-property!
+                  grob 'shorten-pair
+                  (cons  (+ -0.6 hOffset) (- -0.6 hOffset)))
+
+                 )
+                )
 
          )
         ) #dyn  #}))
@@ -1926,10 +1916,24 @@ nDecrescTweak =
              ;; if yes, get the split pieces (our siblings)
              (siblings (if (ly:grob? orig)
                            (ly:spanner-broken-into orig)
-                           '())))
+                           '()))
+             (toBarline? (ly:grob-property grob 'to-barline))
 
-       (if   (= (length siblings) 0)
-             (cons 0  (+ -0.6 (* hOffset -1)))))
+             )
+
+       (cond
+        ((and (zero? (length siblings)) (not toBarline?))
+         (cons hOffset -0.6)
+         )
+        ((and (zero? (length siblings)) toBarline?)
+         (cons hOffset -0.6)
+         )
+        ((and (>= (length siblings) 1)
+              (eq? (car siblings) grob)
+              )
+         (cons -0.6 0))
+        )
+       )
       )
     \tweak Hairpin.after-line-breaking
     #(lambda (grob)
@@ -1942,10 +1946,45 @@ nDecrescTweak =
                            (ly:spanner-broken-into orig)
                            '())))
 
-       (if  (and (>= (length siblings) 1)
-                 (eq? (car (last-pair siblings)) grob))
+       (cond
+        ((and (>= (length siblings) 1)
+              (eq? (car (last-pair siblings)) grob))
+         (ly:grob-set-property!
+          grob 'shorten-pair
+          (cons  (+ -0.6 hOffset) (- -0.6 hOffset)))
+         )
 
-            (ly:grob-set-property! grob 'shorten-pair '(-0.6 . -0.6))))
+        ((zero? (length siblings)  )
+         #f
+         )
+
+        ((and (>= (length siblings) 2)
+              (eq? (car (last-pair siblings)) grob)
+              toBarline? )
+         (ly:grob-set-property!
+          grob 'shorten-pair
+          (cons 0 (- -0.6 hOffset)))
+         )
+
+        ((and (>= (length siblings) 2)
+              (eq? (car siblings) grob)
+              )
+         (ly:grob-set-property!
+          grob 'shorten-pair
+          (cons   0 0))
+         )
+
+        ((and (>= (length siblings) 2)
+              (eq? (car (last-pair siblings)) grob)
+              (not toBarline?) )
+         (ly:grob-set-property!
+          grob 'shorten-pair
+          (cons  (+ -0.6 hOffset) (- -0.6 hOffset)))
+         )
+        )
+
+
+       )
       ) #dyn #}))
 
 \layout {
@@ -1955,21 +1994,22 @@ nDecrescTweak =
 }
 
 
+
 {
- % \override Hairpin.height = #0.5
+ \override Hairpin.height = #0.5
  \override Hairpin.stencil = #flared-hairpin-new
  \override Hairpin.to-barline = ##f
  \override Hairpin.after-line-breaking = ##f
 
- c' \o \nCrescTweak   \< c' c' c' \f \nDecrescTweak \>
- c' c'\o\nCrescTweak #-0.75 \< c' c' \break
+ c' \fff \nCrescTweak \< c' c' c' \o \nDecrescTweak #-0.25 \>
+ c' c'\o\nCrescTweak #-0.6  \< c' c' \break
  \repeat unfold 3  {c' c' c' c'} \break
  c'\ff \nDecrescTweak \> c' c' c'
- c' \p \nCrescTweak \< c' c' \nDecrescTweak #-0.6 \> c'
- c' \p \< c' c' c'\ff \nDecrescTweak \> \break
+ c' \p \nCrescTweak \< c' c' \nDecrescTweak \> c'
+ c' \p \< c'  c'\! \nDecrescTweak \> c' \break
  \repeat unfold 3  {c' c' c' c'} \break
- c' \f  \nDecrescTweak \> c' c' c'\o \nCrescTweak \<
- c' c' c' c' \!
+ c' \f  \nDecrescTweak \> c' c' c'\o \nCrescTweak #-1 \<
+ c' c' c' c' \break c'\! \bar"."
 }
 
 \end{Verbatim}
@@ -1992,7 +2032,7 @@ nDecrescTweak =
 
 \subsection{Description}
 
-\textcolor{red}{\textbf{NB: }Significantly updated on December 23, 2025}
+\textcolor{red}{\textbf{NB: }Significantly updated on December 23, 2025 and cosmetic alteration undertaken on December 24, 2025.}
 
 See \hyperref[sec:enhanced_flared_hairpins_1]{\textbf{Enhanced Flared Hairpins I}} for the flared hairpins similar to \href{https://lilypond.org/doc/v2.24/Documentation/snippets/expressive-marks#expressive-marks-printing-hairpins-in-various-styles}{\textbf{LilyPond's default flared hairpins.}}
 
@@ -2012,7 +2052,8 @@ NOTE \o \nCrescTweak \< NOTE(S) \DYNAMIC OR \! \nDecrescTweak \> NOTE(S) \o
 \end{verbatim}
 
 
-\textcolor{red}{Update: December 23, 2025 } \verb|\nCrescTweak| and \verb|\nDecrescTweak| accepts a number as an optional argument. This functionality has been added to allow the adjustment of the hairpin at the arrival point. Think of this as an \verb|X-offset| for the arrival point. See \textbf{Code}. 
+\textcolor{red}{Update: December 23-24, 2025 } \verb|\nCrescTweak| and \verb|\nDecrescTweak| accepts a number as an optional argument. This functionality has been added to allow the adjustment of flaring end of the hairpin, as well as the horizontal placement of the small piece of the arrival hairpin when \verb|\override to-barline| is set \verb|##f|. While I have striven to set the default setting in such a way that these micro-adjustments are not necessary, it seemed helpful to add this functionality when further refinement is needed. Think of this as an \verb|X-offset| for the arrival point. See \textbf{Code}. 
+
 
 \subsection{Code}
 \begin{Verbatim}[numbers=left,xleftmargin=5mm]
@@ -2348,38 +2389,7 @@ taken from output-lib.scm, and was revised to suit the need.
                 ((>= lenx 2)
                  ;if the normal ending flare crescendo
                  ;is applied...
-                 (ly:stencil-combine-at-edge
-                  (ly:stencil-combine-at-edge
-                   (hairpin::print-part
-                    (scale-coords
-                     coords
-                     (+ lenx 0.75) (/ leny 3))  decresc? grob)
-                   1
-                   -1
-                   (if mirrored?
-                       (hairpin::print-part
-                        (scale-coords
-                         coords
-                         (+ lenx 0.75) (/ leny -3)) decresc? grob)
-                       empty-stencil)
-                   0.1 ;vertical padding value here
-                   )
-                  0
-                  1
-                  (make-path-stencil
-                   (list 'moveto 0 (* 0.133 (/ hairpinHeight 0.666) )
-                         'rcurveto 0 0 0.3 -0.0 0.4 0.3
-                         'moveto 0
-                         (- (* -0.133 (/ hairpinHeight 0.666) ) 0.1)
-                         'rcurveto 0 0 0.3 0.0 0.4 -0.3
-                         )
-                   0.1
-                   2
-                   2
-                   #f
-                   )
-                  -0.075
-                  )
+
                  (ly:stencil-combine-at-edge
                   (ly:stencil-combine-at-edge
                    (hairpin::print-part
@@ -2399,10 +2409,11 @@ taken from output-lib.scm, and was revised to suit the need.
                   0
                   1
                   (make-path-stencil
-                   (list   'moveto 0 (* 0.133 (/ hairpinHeight 0.666) )
+                   (list   'moveto 0
+                           (+ (* 0.111 (/ hairpinHeight 0.666) ) 0.01 )
                            'rcurveto 0 0 0.3 -0.0 0.4 0.3
                            'moveto 0
-                           (- (* -0.133 (/ hairpinHeight 0.666) ) 0.1)
+                           (- (* -0.111 (/ hairpinHeight 0.666) ) 0.11)
                            'rcurveto 0 0 0.3 0.0 0.4 -0.3
                            )
                    0.1
@@ -2633,7 +2644,6 @@ taken from output-lib.scm, and was revised to suit the need.
                          #:musicglyph "scripts.flageolet"
                          ))
               ))
-
 nCrescTweak =
 #(define-music-function (num dyn) ((number? 0) ly:event? )
   (let* ((hOffset num))
@@ -2649,12 +2659,19 @@ nCrescTweak =
                              (ly:spanner-broken-into orig)
                              '())))
 
-         (if   (or (= (length siblings) 0)
-                   (and (>= (length siblings) 0)
-                        (eq? (first siblings) grob))
+         (cond
+          ((= (length siblings) 0)
+           (cons -0.6 hOffset)
+           )
+          ((and (>= (length siblings) 1)
+                (eq? (car siblings) grob)
+                )
+           (cons -0.6 0))
+          )
 
-                   )
-               (cons -0.6 num)))
+
+
+         )
         )
       \tweak Hairpin.after-line-breaking
       #(lambda (grob)
@@ -2670,17 +2687,32 @@ nCrescTweak =
 
                )
 
-         (if  (and (>= (length siblings) 2)
-                   (eq? (car (last-pair siblings)) grob))
-              (if toBarline?
-                  (ly:grob-set-property!
-                   grob 'shorten-pair
-                   (cons 0 (+ (* 0.6 -1) hOffset)))
-                  (ly:grob-set-property!
-                   grob 'shorten-pair
-                   (cons (+ -0.6 hOffset)  -0.6))
-                  )
-              )
+         (cond  ((< (length siblings) 2)
+                 (ly:grob-set-property!
+                  grob 'shorten-pair
+                  (cons -0.6 (* hOffset -1)))
+
+                 )
+
+                ((and (>= (length siblings) 2)
+                      (eq? (car (last-pair siblings)) grob)
+                      toBarline? )
+
+                 (ly:grob-set-property!
+                  grob 'shorten-pair
+                  (cons 0 (- -0.6 hOffset)))
+
+
+                 )
+                ((and (>= (length siblings) 2)
+                      (eq? (car (last-pair siblings)) grob)
+                      (not toBarline?) )
+                 (ly:grob-set-property!
+                  grob 'shorten-pair
+                  (cons  (+ -0.6 hOffset) (- -0.6 hOffset)))
+
+                 )
+                )
 
          )
         ) #dyn  #}))
@@ -2698,10 +2730,24 @@ nDecrescTweak =
              ;; if yes, get the split pieces (our siblings)
              (siblings (if (ly:grob? orig)
                            (ly:spanner-broken-into orig)
-                           '())))
+                           '()))
+             (toBarline? (ly:grob-property grob 'to-barline))
 
-       (if   (= (length siblings) 0)
-             (cons 0  (+ -0.6 (* hOffset -1)))))
+             )
+
+       (cond
+        ((and (zero? (length siblings)) (not toBarline?))
+         (cons hOffset -0.6)
+         )
+        ((and (zero? (length siblings)) toBarline?)
+         (cons hOffset -0.6)
+         )
+        ((and (>= (length siblings) 1)
+              (eq? (car siblings) grob)
+              )
+         (cons -0.6 0))
+        )
+       )
       )
     \tweak Hairpin.after-line-breaking
     #(lambda (grob)
@@ -2714,10 +2760,45 @@ nDecrescTweak =
                            (ly:spanner-broken-into orig)
                            '())))
 
-       (if  (and (>= (length siblings) 1)
-                 (eq? (car (last-pair siblings)) grob))
+       (cond
+        ((and (>= (length siblings) 1)
+              (eq? (car (last-pair siblings)) grob))
+         (ly:grob-set-property!
+          grob 'shorten-pair
+          (cons  (+ -0.6 hOffset) (- -0.6 hOffset)))
+         )
 
-            (ly:grob-set-property! grob 'shorten-pair '(-0.6 . -0.6))))
+        ((zero? (length siblings)  )
+         #f
+         )
+
+        ((and (>= (length siblings) 2)
+              (eq? (car (last-pair siblings)) grob)
+              toBarline? )
+         (ly:grob-set-property!
+          grob 'shorten-pair
+          (cons 0 (- -0.6 hOffset)))
+         )
+
+        ((and (>= (length siblings) 2)
+              (eq? (car siblings) grob)
+              )
+         (ly:grob-set-property!
+          grob 'shorten-pair
+          (cons   0 0))
+         )
+
+        ((and (>= (length siblings) 2)
+              (eq? (car (last-pair siblings)) grob)
+              (not toBarline?) )
+         (ly:grob-set-property!
+          grob 'shorten-pair
+          (cons  (+ -0.6 hOffset) (- -0.6 hOffset)))
+         )
+        )
+
+
+       )
       ) #dyn #}))
 
 \layout {
@@ -2727,23 +2808,23 @@ nDecrescTweak =
 }
 
 
+
 {
  \override Hairpin.height = #0.5
  \override Hairpin.stencil = #flared-hairpin-curvy
- \override Hairpin.to-barline = ##t
+ \override Hairpin.to-barline = ##f
  \override Hairpin.after-line-breaking = ##f
 
- c' \o \nCrescTweak   \< c' c' c' \f \nDecrescTweak \>
- c' c'\o\nCrescTweak #-0.75 \< c' c' \break
+ c' \fff \nCrescTweak #0.25 \< c' c' c' \o \nDecrescTweak #0 \>
+ c' c'\o\nCrescTweak #-0.6  \< c' c' \break
  \repeat unfold 3  {c' c' c' c'} \break
  c'\ff \nDecrescTweak \> c' c' c'
- c' \p \nCrescTweak \< c' c' \nDecrescTweak #-0.6 \> c'
- c' \p \< c'  c'\ff \nDecrescTweak \> c' \break
+ c' \p \nCrescTweak \< c' c' \nDecrescTweak \> c'
+ c' \p \< c'  c'\! \nDecrescTweak \> c' \break
  \repeat unfold 3  {c' c' c' c'} \break
- c' \f  \nDecrescTweak \> c' c' c'\o \nCrescTweak \<
- c' c' c' c' \break c'\!
+ c' \f  \nDecrescTweak \> c' c' c'\o \nCrescTweak #-1 \<
+ c' c' c' c' \break c'\! \bar"."
 }
-
 \end{Verbatim}
 \subsection{Discussion}
 
